@@ -3,6 +3,9 @@ CHANGES.txt - 11/07/2003
 
 CHANGES IN CUPS V1.1.20
 
+	- The cupstestppd utility now checks for missing
+	  ImageableArea and PaperDimension attributes for each
+	  defined PageSize (STR #365)
 	- The IPP code did not wait for a reply indefinitely on
 	  HTTP connections in "blocking" mode (STR #377)
 	- The web interfaces did not rewrite the default printer
